# raytracer

./: .gitignore  Cargo.toml  launch.ron
.cargo/: config.toml
benches/: my_benchmark.rs
benches/alley/: alley.gltf  alley_2.gltf
benches/alley/assets/models/grass_76d82535-61ad-42c5-8d10-09de27bbe179/: grass_09bc4835-8272-43e2-9d5a-a9ff8d130f16.blend
benches/refr/: refr.blend  refr.blend1  refr.gltf
benches/refr/Bricks075A_2K-JPG/: Bricks075A_2K-JPG.blend  Bricks075A_2K-JPG.mtlx  Bricks075A_2K-JPG.tres  Bricks075A_2K-JPG.usdc
benches/refr/gltf/: test.gltf
src/: animation.rs  camera.rs  consts.rs  context.rs  core.rs  denoise.rs  frame.rs  lib.rs  main.rs  math.rs  options.rs  render_controller.rs  static_stack.rs
src/acceleration/: bounds.rs  bvh.rs  kdtree.rs  mod.rs
src/animation/: controller.rs
src/camera/: perspective_camera.rs  viewpoint.rs
src/content/: content_cache.rs  mesh.rs  mod.rs  scene_loader.rs  triangle.rs
src/content/assimp/: converter.rs  loader.rs  mod.rs
src/content/gltf/: converter.rs  loader.rs  material.rs  mod.rs  util.rs
src/context/: diagnostics.rs  memory.rs  statistics.rs
src/denoise/: oidn.rs  passthrough.rs
src/integrator/: albedo.rs  bdpt.rs  debug.rs  integrator.rs  mod.rs  normal.rs  pathtracing.rs  whitted.rs
src/scene/: coordinate_system.rs  light.rs  material.rs  mod.rs  node_graph.rs  scene.rs  texture.rs  transform.rs
