[package]
name = "raytracer"
version = "0.1.0"
edition = "2024"

[dependencies]
nalgebra = "0.33.2"
image = "0.25.6"
anyhow = "1.0.97"
rand = "0.9.1"
rayon = "1.10.0"
gltf = { version = "1.4.1", features = ["import", "KHR_materials_ior", "KHR_materials_transmission", "KHR_materials_emissive_strength", "KHR_texture_transform", "KHR_lights_punctual"] }
clap = { version = "4.5.38", features = ["derive"] }
winit = "0.30.13"
pixels = "0.16.0"
ron = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
ffmpeg-cli = "0.1.0"
tokio = { version = "1.52" , features = ["full"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false